extract javascript into a js file and allow max iteration input

--- a/index.html
+++ b/index.html
@@ -1,58 +1,22 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div>
+      <select id="backend">
+        <option value="javascript">JavaScript</option>
+        <option value="native">Native</option>
+      </select>
+      Iterations: <input type="text" size="6" id="iterations" value="10" />
+      <button id="render">Render</button>
+    </div>
+    <div id="render_time">
+      Time: 0ms
+    </div>
+    <div>
+      <canvas id="screen" width="600" height="600" style="border: solid 1px#000;"></canvas>
+    </div>
     <script>
-function checkIfBelongsToMandelbrotSet(x, y) {
-  var realComponentOfResult = x;
-  var imaginaryComponentOfResult = y;
-  var maxIterations = 10;
-
-  for(var i = 0; i < maxIterations; i++) {
-    // Calculate the real and imaginary components of the result
-    // separately
-    var tempRealComponent = realComponentOfResult * realComponentOfResult
-      - imaginaryComponentOfResult * imaginaryComponentOfResult
-      + x;
-
-    var tempImaginaryComponent = 2 * realComponentOfResult * imaginaryComponentOfResult
-      + y;
-
-    realComponentOfResult = tempRealComponent;
-    imaginaryComponentOfResult = tempImaginaryComponent;
-
-    if (realComponentOfResult * imaginaryComponentOfResult > 5)
-      return (i/maxIterations * 100); // In the Mandelbrot set
-  }
-
-  return 0; // Not in the set
-}
-(function() {
-  // Create Canvas
-  var myCanvas = document.createElement("canvas");
-  myCanvas.width=600;
-  myCanvas.height=600;
-  document.body.appendChild(myCanvas);
-  var ctx = myCanvas.getContext("2d");
-
-  // Start drawing
-  var magnificationFactor = 200;
-  var panX = 2;
-  var panY = 1.5;
-  for(var x=0; x < myCanvas.width; x++) {
-    for(var y=0; y < myCanvas.height; y++) {
-      var belongsToSet = 
-        checkIfBelongsToMandelbrotSet(x/magnificationFactor - panX, 
-            y/magnificationFactor - panY);
-      if(belongsToSet == 0) {
-        ctx.fillStyle = '#000';
-        ctx.fillRect(x,y, 1,1); // Draw a black pixel
-      } else {
-        ctx.fillStyle = 'hsl(0, 100%, ' + belongsToSet + '%)';
-        ctx.fillRect(x,y, 1,1); // Draw a colorful pixel
-      }
-    } 
-  }
-})();
+      require('./render.js')
     </script>
   </body>
 </html>
