--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       Iterations: <input type="text" size="6" id="iterations" value="10" />
       <button id="render">Render</button>
     </div>
-    <div id="render_time">
-      Time: 0ms
+    <div>
+      <p id="render_time">Time: 0ms</p>
     </div>
     <div>
       <canvas id="screen" width="600" height="600" style="border: solid 1px#000;"></canvas>
