extract js functions into separate object, use 1 draw function

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <div>
       <select id="backend">
         <option value="javascript">JavaScript</option>
-        <option value="native">Native</option>
+        <option value="rust">Rust</option>
+        <option value="rust parallel">Rust Parallel</option>
       </select>
       Iterations: <input type="text" size="6" id="iterations" value="100" />
       <button id="render">Render</button>
