add ability to zoom & pan

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <option value="rust parallel">Rust Parallel</option>
       </select>
       Iterations: <input type="text" size="6" id="iterations" value="100" />
-      <button id="render">Render</button>
+      Magnification: <input type="text" size="3" id="magnification" value="200" />
+      X: <input type="text" size="3" id="panX" value="2" />
+      Y: <input type="text" size="3" id="panY" value="1.5" />
     </div>
     <div>
+      <button id="render">Render</button>
       <p id="render_time">Time: 0ms</p>
     </div>
     <div>
